compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_of_external_function_in_same_module.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 605
expression: output
---
----- Jumping from `src/app.rakun`

@external(erlang, "wibble", "wobble")
fn external_function() -> Nil

fn main() {
  external_function()
         ↑           
}

----- Jumped to `src/app.rakun`

@external(erlang, "wibble", "wobble")
fn external_function() -> Nil
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔       

fn main() {
  external_function()
}
