compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_path_module_function_calls.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 421
expression: output
---
----- Jumping from `src/app.rakun`

import example_module
fn main() {
  example_module.my_fn
                  ↑   
}

----- Jumped to `dep/src/example_module.rakun`
pub fn my_fn() { Nil }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔
