compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_same_module_constants.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 81
expression: output
---
----- Jumping from `src/app.rakun`

const x = 1

pub fn main() {
  x
  ↑
}

----- Jumped to `src/app.rakun`

const x = 1
↑▔▔▔▔▔▔    

pub fn main() {
  x
}
