compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_same_module_functions.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 94
expression: output
---
----- Jumping from `src/app.rakun`

fn add_2(x) {
  x + 2
}

pub fn main() {
  add_2(1)
  ↑       
}

----- Jumped to `src/app.rakun`

fn add_2(x) {
↑▔▔▔▔▔▔▔▔▔▔  
  x + 2
}

pub fn main() {
  add_2(1)
}
