compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_same_module_records.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 109
expression: output
---
----- Jumping from `src/app.rakun`

pub record Rec {
  Var1(Int)
  Var2(Int, Int)
}

pub fn main() {
  let a = Var1(1)
          ↑      
  let b = Var2(2, 3)
}

----- Jumped to `src/app.rakun`

pub record Rec {
  Var1(Int)
  ↑▔▔▔▔▔▔▔▔
  Var2(Int, Int)
}

pub fn main() {
  let a = Var1(1)
  let b = Var2(2, 3)
}
