compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_unqualified_function.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.rakun`

import wibble.{wobble}
fn main() {
  wobble()
   ↑      
}

----- Jumped to `src/wibble.rakun`
pub fn wobble() {}
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔
